# logs_library

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: feature-check.yml
json_log_library/: __init__.py  formatter.py
json_log_library/decorators/: __init__.py  base.py  v1.py
library_utils/: __init__.py
logs_library/: __init__.py  decorator.py  formatter.py  logger.py
tests/: test_decorator.py  test_formatter.py  test_logger.py
