[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logs-library"
version = "0.1.0"
description = "Decorators reutilizáveis para logging"
authors = [{name="Guilherme Vilela Moreira", email="guilherme.v.moreira@outlook.com"}]
readme = "README.md"
requires-python = ">=3.9"